// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`detail should match the normalizr-detail-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_idAttribute": "id",
  "_key": "details",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {
    "idAttribute": "id",
  },
}
`;

exports[`menu schema should match the normalizr-menu-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_idAttribute": "id",
  "_key": "menus",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {
    "details": Array [
      EntitySchema {
        "_getId": [Function],
        "_idAttribute": "id",
        "_key": "details",
        "_mergeStrategy": [Function],
        "_processStrategy": [Function],
        "schema": Object {
          "idAttribute": "id",
        },
      },
    ],
  },
}
`;
